--- a/css/materialize.css
+++ b/css/materialize.css
@@ -5385,6 +5385,7 @@ small {
     position: absolute;
     background-color: #FFF;
     top: 100%;
+    width: 100%;
     height: 100%;
     z-index: 1;
     -webkit-box-sizing: border-box;
